--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
         <section class="team" id="team">
           <div class="layout--page">
-            <h1 style="color: #fff">THE PLANNING COMMITEE</h1>
+            <h1 style="color: #fff">THE PLANNING COMMITTEE</h1>
             <div class="speaker">
               <div class="speaker__wrap">
                 <div class="speaker__img" style="background-image: url(assets/img/andy.png)">
