replace <br>s with <p>

--- a/index.html
+++ b/index.html
@@ -323,13 +323,13 @@
             <h2 style="color: #00467f">Hack Week is a weeklong tutorial that teaches you how to build a webapp with <span class="venue__highlight">little to no programming experience</span>.</h2>
             <div style="text-align: center; margin-bottom: 20px;" >
               <br>
-              <h3>When</h3> <br>
-              Hack Week is every evening from 7-9 pm starting the Monday before the hackathon and culminating in the 5C Hackathon on Friday. <br>
+              <h3>When</h3>
+              <p>Hack Week is every evening from 7-9 pm starting the Monday before the hackathon and culminating in the 5C Hackathon on Friday.</p>
 
-              <h3>What</h3> <br>
-              Hack Week has both a beginner and advanced section that teaches you how to build a dynamic web application. Last fall we covered basic HTML/CSS, front-end interactions with JavaScript and jQuery, web servers with NodeJS, sleek and easy design with Bootstrap, and databases with MongoDB. <br>
-              <h3>Code</h3> <br>
-              Check out the apps from this year and previous years at our <a href="http://github.com/5chackathon">Github</a> page. During Hack Week, the starter code for each day will also be uploaded here.
+              <h3>What</h3>
+              <p>Hack Week has both a beginner and advanced section that teaches you how to build a dynamic web application. Last fall we covered basic HTML/CSS, front-end interactions with JavaScript and jQuery, web servers with NodeJS, sleek and easy design with Bootstrap, and databases with MongoDB.</p>
+              <h3>Code</h3>
+              <p>Check out the apps from this year and previous years at our <a href="http://github.com/5chackathon">Github</a> page. During Hack Week, the starter code for each day will also be uploaded here.</p>
             </div>
           </div>
         </section>
