remove uppercase text and replace with style

--- a/index.html
+++ b/index.html
@@ -19,18 +19,19 @@
   <header class="off">
     <div class="layout--page">
       <a class="logo" href="#">
-        <span class="logo__main">5C HACKATHON</span></a>
+        <span class="logo__main">5C Hackathon</span></a>
       <nav>
         <ul class="nav--main">
-          <li class=""><a class="nav--link" href="#schedule" data-text="SCHEDULE">SCHEDULE</a></li>
-          <li class=""><a class="nav--link" href="#companies" data-text="SPONSORS">SPONSORS</a></li>
-          <li class=""><a class="nav--link" href="#team" data-text="TEAM">TEAM</a></li>
-          <li class=""><a class="nav--link" href="#hack-week" data-text="HACK WEEK">HACK WEEK</a></li>
-          <li><a class="nav--link reg">REGISTER</a></li>
+          <li class=""><a class="nav--link" href="#schedule" data-text="SCHEDULE">Schedule</a></li>
+          <li class=""><a class="nav--link" href="#companies" data-text="SPONSORS">Sponsors</a></li>
+          <li class=""><a class="nav--link" href="#team" data-text="TEAM">Team</a></li>
+          <li class=""><a class="nav--link" href="#hack-week" data-text="HACK WEEK">Hack Week</a></li>
+          <li><a class="nav--link reg">Register</a></li>
         </ul>
       </nav>
     </div>
   </header>
+
   <section>
     <div class="banner">
       <img class="banner__img" src="background.png" alt="5C Hackathon">
@@ -39,70 +40,71 @@
     </div>
     <div class="intro">
       <div class="layout--page">
-        <h1>A HACKATHON LIKE NO OTHER</h1>
+        <h1>A Hackathon Like No Other</h1>
         <p class="intro__desc">Join other 5C students for a hackathon that is beginner friendly and welcoming of all types of people. The 5C Hackathon is a great experience regardless of your programming ability.  </p>
         <a class="intro__reg reg"><span class="nowrap">Register Now!</span></a>
       </div>
     </div>
   </section>
+
   <section class="schedule" id="schedule">
     <div class="layout--page">
-      <h1>SPRING 2014 SCHEDULE</h1>
+      <h1>Spring 2014 Schedule</h1>
       <div class="row">
         <div>
           <div class="session no">
             <h4 class="session__title">
               <span class="session__time">7:00 PM</span>
-              KICKOFF
+              Kickoff
             </h4>
             <b class="marker"></b>
           </div>
           <div class="session">
             <h4 class="session__title">
               <span class="session__time">8:00 PM</span>
-              HACKING BEGINS
+              Hacking begins
             </h4>
             <b class="marker"></b>
           </div>
           <div class="session">
             <h4 class="session__title">
               <span class="session__time">11:00 PM</span>
-              FOOD TRUCK ROLLS IN
+              Food truck rolls in
             </h4>
             <b class="marker"></b>
           </div>
           <div class="session">
             <h4 class="session__title">
               <span class="session__time">3:00 AM</span>
-              2-MINUTE RUN
+              2-minute run
             </h4>
             <b class="marker"></b>
           </div>
           <div class="session">
             <h4 class="session__title">
               <span class="session__time">4:00 AM</span>
-              KRISPY KREME
+              Krispy Kreme
             </h4>
             <b class="marker"></b>
           </div>
           <div class="session">
             <h4 class="session__title">
               <span class="session__time">6:00 AM</span>
-              CRUNCH TIME
+              Crunch time
             </h4>
             <b class="marker"></b>
           </div>
           <div class="session">
             <h4 class="session__title">
               <span class="session__time">8:00 AM</span>
-              PRESENTATION AND PRIZES
+              Presentation and prizes
             </h4>
             <b class="marker"></b>
           </div>
           <div class="session">
             <h4 class="session__title">
               <span class="session__time">10:00 AM</span>
-              BED TIME
+              Bed time
             </h4>
             <b class="marker"></b>
           </div>
@@ -111,9 +113,10 @@
     </div>
   </div>
 </section>
+
 <section class="companies" id="companies">
   <div class="layout--page">
-    <h1>THE FALL 2014 SPONSORS</h1>
+    <h1>The Fall 2014 Sponsors</h1>
     <h3>Gold</h3>
     <div class="logos sponsors">
       <img height="80" src="assets/img/intuit.png" alt="Intuit">
@@ -127,7 +130,7 @@
   </section>
   <section class="team" id="team">
     <div class="layout--page">
-      <h1 style="color: #fff">THE PLANNING COMMITTEE</h1>
+      <h1 style="color: #fff">The Planning Committee</h1>
       <div class="speaker">
         <div class="speaker__wrap">
           <div class="speaker__img" style="background-image: url(assets/img/andy.png)">
@@ -238,16 +241,17 @@
       </div>
     </div>
   </section>
+
   <section class="coc" id="coc">
     <div class="layout--page">
-      <h1>CODE OF CONDUCT</h1>
+      <h1>Code of Conduct</h1>
       <div style="margin-bottom: 20px;">
         We value the participation of each individual and want to provide a positive experience for everyone. Accordingly, all attendees are expected to show respect and courtesy to other attendees. To make clear what is expected, all attendees, speakers, and volunteers are required to follow our Code of Conduct, which will be strictly enforced as deemed necessary.
       </div>
       <div class="row">
         <div>
           <div class="session">
-            <h4 class="session__title">BE RESPECTFUL</h4>
+            <h4 class="session__title">Be Respectful</h4>
             <div class="session__desc">
               <p>Be kind to others. Do not insult or put down other attendees. Behave professionally. Remember that harassment and racist, sexist, or exclusionary jokes or project content are not appropriate for this event and will not be tolerated.</p>
               <p> Harassment includes but is not limited to offensive verbal comments related to gender, sexual orientation, disability, physical appearance, race, or religion; sexual images in public spaces; deliberate intimidation; unwelcome photography or recording; inappropriate physical contact; and unwelcome sexual attention. </p>
@@ -255,14 +259,14 @@
             <b class="marker"></b>
           </div>
           <div class="session">
-            <h4 class="session__title">BE OPEN</h4>
+            <h4 class="session__title">Be Open</h4>
             <div class="session__desc">
               <p>We welcome attendees from all backgrounds and skill levels - from “never been to hackathon before” to seasoned developers. This event is about increasing innovation, partnership, and engagement in the technical community on campus.</p>
             </div>
             <b class="marker"></b>
           </div>
           <div class="session">
-            <h4 class="session__title">BE AWESOME</h4>
+            <h4 class="session__title">Be Awesome</h4>
             <div class="session__desc">
               <p>Do your best. Learn something new. Don't take it too seriously.</p>
               <p>Attendees violating these rules will be asked to leave the hackathon immediately at the discretion of the organizers. Thank you for helping make this a welcoming, safe space for all.</p>
@@ -273,9 +277,10 @@
       </div>
     </div>
   </section>
+
   <section class="hack-week" id="hack-week">
     <div class="layout--page">
-      <h1>HACK WEEK</h1>
+      <h1>Hack Week</h1>
       <h2 style="color: #00467f">Hack Week is a weeklong tutorial that teaches you how to build a webapp with <span class="venue__highlight">little to no programming experience</span>.</h2>
       <div style="text-align: center; margin-bottom: 20px;" >
         <h3>When</h3>
@@ -287,6 +292,7 @@
       </div>
     </div>
   </section>
+
   <footer class="footer">
     <div class="layout--page">
       <div class="footer__details">
@@ -294,13 +300,13 @@
           <img src="assets/img/logo.png" height="100">
         </div>
         <div class="footer__title">
-          5C HACKATHON
+          5C Hackathon
           <span class="footer__date">
-            NOVEMBER 14, 2014 &nbsp; &nbsp;POMONA COLLEGE
+            November 14, 2014 &nbsp; &nbsp;Pomona College
           </span>
         </div>
       </div>
-      <a class="footer__reg reg">REGISTER</a>
+      <a class="footer__reg reg">Register</a>
     </div>
     <div class="closure">
       <div class="layout--page">
