replace schedule with table

--- a/index.html
+++ b/index.html
@@ -48,71 +48,42 @@
   </section>
 
   <section class="schedule" id="schedule">
-    <div class="layout--page">
-      <h1>Spring 2014 Schedule</h1>
-      <div class="row">
-        <div>
-          <div class="session no">
-            <h4 class="session__title">
-              <span class="session__time">7:00 PM</span>
-              Kickoff
-            </h4>
-            <b class="marker"></b>
-          </div>
-          <div class="session">
-            <h4 class="session__title">
-              <span class="session__time">8:00 PM</span>
-              Hacking begins
-            </h4>
-            <b class="marker"></b>
-          </div>
-          <div class="session">
-            <h4 class="session__title">
-              <span class="session__time">11:00 PM</span>
-              Food truck rolls in
-            </h4>
-            <b class="marker"></b>
-          </div>
-          <div class="session">
-            <h4 class="session__title">
-              <span class="session__time">3:00 AM</span>
-              2-minute run
-            </h4>
-            <b class="marker"></b>
-          </div>
-          <div class="session">
-            <h4 class="session__title">
-              <span class="session__time">4:00 AM</span>
-              Krispy Kreme
-            </h4>
-            <b class="marker"></b>
-          </div>
-          <div class="session">
-            <h4 class="session__title">
-              <span class="session__time">6:00 AM</span>
-              Crunch time
-            </h4>
-            <b class="marker"></b>
-          </div>
-          <div class="session">
-            <h4 class="session__title">
-              <span class="session__time">8:00 AM</span>
-              Presentation and prizes
-            </h4>
-            <b class="marker"></b>
-          </div>
-          <div class="session">
-            <h4 class="session__title">
-              <span class="session__time">10:00 AM</span>
-              Bed time
-            </h4>
-            <b class="marker"></b>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+    <table class="layout--page">
+      <caption>Spring 2014 Schedule</caption>
+      <tr>
+        <td class="session__time">7:00 PM</td>
+        <td>Kickoff</td>
+      </tr>
+      <tr>
+        <td class="session__time">8:00 PM</td>
+        <td>Hacking begins</td>
+      </tr>
+      <tr>
+        <td class="session__time">11:00 PM</td>
+        <td>Food truck rolls in</td>
+      </tr>
+      <tr>
+        <td class="session__time">3:00 AM</td>
+        <td>2-minute run</td>
+      </tr>
+      <tr>
+        <td class="session__time">4:00 AM</td>
+        <td>Krispy Kreme</td>
+      </tr>
+      <tr>
+        <td class="session__time">6:00 AM</td>
+        <td>Crunch time</td>
+      </tr>
+      <tr>
+        <td class="session__time">8:00 AM</td>
+        <td>Presentation and prizes</td>
+      </tr>
+      <tr>
+        <td class="session__time">10:00 AM</td>
+        <td>Bed time</td>
+      </tr>
+    </table>
+  </section>
 
 <section class="companies" id="companies">
   <div class="layout--page">
