--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <meta name="description" content="5C Hackathon November 14, 2014">
 <meta name="viewport" content="width=device-width">
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-<link rel="stylesheet" href="assets/styles.css">
+<link rel="stylesheet" type="text/css" href="assets/styles.css">
+<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 
 <script src="./assets/ga.js"></script><script src="./assets/modernizr-2.6.2.min.js"></script><style type="text/css"></style>
 </head>
