--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
 <link rel="stylesheet" type="text/css" href="assets/styles.css">
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 
-<script src="./bower_components/bower-google-analytics/analytics.js"></script>
 <script src="./bower_components/modernizr/modernizr.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-52383426-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body>
 <!--[if lt IE 9]>
