add fontawesome to bower.json; change all icons to use fa icons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="assets/styles.css">
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
+<link rel="stylesheet" type="text/css" href="./bower_components/fontawesome/css/font-awesome.min.css">
 
 <script src="./bower_components/modernizr/modernizr.js"></script>
 <script>
@@ -98,7 +99,7 @@
 
 <section class="companies" id="companies">
   <div class="layout--page">
-    <h1>The Fall 2014 Sponsors</h1>
+    <h1>The Spring 2014 Sponsors</h1>
     <h3>Gold</h3>
     <div class="logos sponsors">
       <img height="80" src="assets/img/intuit.png" alt="Intuit">
@@ -293,9 +294,8 @@
     <div class="closure">
       <div class="layout--page">
         <div class="social">
-          <a target="_blank" class="social__link facebook" href="#"><span class="icon" data-icon=""></span><span class="visuallyhidden">Facebook</span></a>
-          <a target="_blank" class="social__link twitter" href="#"><span class="glyphicon glyphicon-envelope"></span><span class="visuallyhidden">Twitter</span></a>
-          <a class="social__link email" href="#"><span class="icon" data-icon=""></span><span class="visuallyhidden">Email</span></a>
+          <a target="_blank" class="social__link twitter" href="#"><i class="fa fa-twitter"></i><span class="visuallyhidden">Twitter</span></a>
+          <a class="social__link email" href="#"><i class="fa fa-envelope"></i><span class="visuallyhidden">Email</span></a>
         </div>
         <span class="closure__copy">© 2014 5C Hackathon</span>
       </div>
