--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <div class="speaker__img" style="background-image: url(assets/img/andy.png)">
           </div>
           <div class="speaker__social">
-            <a class="speaker__social-button" href="#"><span class="glyphicon glyphicon-envelope"></span><span class="visuallyhidden">Twitter</span></a>
+            <a class="speaker__social-button" href="#"><i class="fa fa-envelope"></i><span class="visuallyhidden">Twitter</span></a>
           </div>
         </div>
         <div class="speaker__name" style="color: #fff">
@@ -137,7 +137,7 @@
           <div class="speaker__img" style="background-image: url(assets/img/ryan.png)">
           </div>
           <div class="speaker__social">
-            <a class="speaker__social-button" href="#"><span class="glyphicon glyphicon-envelope"></span><span class="visuallyhidden">Twitter</span></a>
+            <a class="speaker__social-button" href="#"><i class="fa fa-envelope"></i><span class="visuallyhidden">Twitter</span></a>
           </div>
         </div>
         <div class="speaker__name" style="color:#fff">
@@ -155,7 +155,7 @@
           <div class="speaker__img" style="background-image: url(assets/img/aloke.png)">
           </div>
           <div class="speaker__social">
-            <a class="speaker__social-button" href="#"><span class="glyphicon glyphicon-envelope"></span><span class="visuallyhidden">Twitter</span></a>
+            <a class="speaker__social-button" href="#"><i class="fa fa-envelope"></i><span class="visuallyhidden">Twitter</span></a>
           </div>
         </div>
         <div class="speaker__name" style="color:#fff">
@@ -173,7 +173,7 @@
           <div class="speaker__img" style="background-image: url(/web/assets/img/speakers/scott-painter.png)">
           </div>
           <div class="speaker__social">
-            <a class="speaker__social-button" href="#"><span class="glyphicon glyphicon-envelope"></span><span class="visuallyhidden">Twitter</span></a>
+            <a class="speaker__social-button" href="#"><i class="fa fa-envelope"></i><span class="visuallyhidden">Twitter</span></a>
           </div>
         </div>
         <div class="speaker__name" style="color:#fff">
@@ -191,7 +191,7 @@
           <div class="speaker__img" style="background-image: url(/web/assets/img/speakers/eric-garcetti.png)">
           </div>
           <div class="speaker__social">
-            <a class="speaker__social-button" href="#"><span class="glyphicon glyphicon-envelope"></span><span class="visuallyhidden">Twitter</span></a>
+            <a class="speaker__social-button" href="#"><i class="fa fa-envelope"></i><span class="visuallyhidden">Twitter</span></a>
           </div>
         </div>
         <div class="speaker__name" style="color:#fff">
@@ -209,7 +209,7 @@
           <div class="speaker__img" style="background-image: url(/web/assets/img/speakers/sean-rad.png)">
           </div>
           <div class="speaker__social">
-            <a class="speaker__social-button" href="#"><span class="glyphicon glyphicon-envelope"></span><span class="visuallyhidden">Twitter</span></a>
+            <a class="speaker__social-button" href="#"><i class="fa fa-envelope"></i><span class="visuallyhidden">Twitter</span></a>
           </div>
         </div>
         <div class="speaker__name" style="color:#fff">
