link to /sponsor in sponsor section

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 <section class="companies" id="companies">
   <div class="layout--page">
     <h1>The Spring 2014 Sponsors</h1>
+    <p>Interesting in sponsoring the Fall 2014 Hackathon? Click here for more information.</p>
     <h3>Gold</h3>
     <div class="logos sponsors">
       <img height="80" src="assets/img/intuit.png" alt="Intuit">
