--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width">
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="assets/styles.css">
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 <link rel="stylesheet" type="text/css" href="./bower_components/fontawesome/css/font-awesome.min.css">
 
 <script src="./bower_components/modernizr/modernizr.js"></script>
@@ -100,7 +100,7 @@
 <section class="companies" id="companies">
   <div class="layout--page">
     <h1>The Spring 2014 Sponsors</h1>
-    <p>Interesting in sponsoring the Fall 2014 Hackathon? Click here for more information.</p>
+    <p>Interesting in sponsoring the Fall 2014 Hackathon? Click <a href="sponsor.html">here</a> for more information.</p>
     <h3>Gold</h3>
     <div class="logos sponsors">
       <img height="80" src="assets/img/intuit.png" alt="Intuit">
