--- a/index.html
+++ b/index.html
@@ -11,16 +11,7 @@
 <link rel="stylesheet" type="text/css" href="./bower_components/fontawesome/css/font-awesome.min.css">
 
 <script src="./bower_components/modernizr/modernizr.js"></script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-52383426-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
 </head>
 <body>
 <!--[if lt IE 9]>
@@ -171,7 +162,7 @@
       </div>
       <div class="speaker">
         <div class="speaker__wrap">
-          <div class="speaker__img" style="background-image: url(/web/assets/img/speakers/scott-painter.png)">
+          <div class="speaker__img" style="background-image: url(#)">
           </div>
           <div class="speaker__social">
             <a class="speaker__social-button" href="#"><i class="fa fa-envelope"></i><span class="visuallyhidden">Twitter</span></a>
@@ -189,7 +180,7 @@
       </div>
       <div class="speaker">
         <div class="speaker__wrap">
-          <div class="speaker__img" style="background-image: url(/web/assets/img/speakers/eric-garcetti.png)">
+          <div class="speaker__img" style="background-image: url(#)">
           </div>
           <div class="speaker__social">
             <a class="speaker__social-button" href="#"><i class="fa fa-envelope"></i><span class="visuallyhidden">Twitter</span></a>
@@ -207,7 +198,7 @@
       </div>
       <div class="speaker">
         <div class="speaker__wrap">
-          <div class="speaker__img" style="background-image: url(/web/assets/img/speakers/sean-rad.png)">
+          <div class="speaker__img" style="background-image: url(#)">
           </div>
           <div class="speaker__social">
             <a class="speaker__social-button" href="#"><i class="fa fa-envelope"></i><span class="visuallyhidden">Twitter</span></a>
