--- a/sponsor.html
+++ b/sponsor.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width">
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="assets/styles.css">
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 <link rel="stylesheet" type="text/css" href="./bower_components/fontawesome/css/font-awesome.min.css">
 
 <script src="./bower_components/modernizr/modernizr.js"></script>
